# Prompt_bot

./: .gitignore  main.py  pyproject.toml
src/bot/: config.py  logger.py
src/bot/data/: templates.json
src/bot/handlers/: __init__.py  improve.py  prompts.py  start.py
src/bot/keyboards/: __init__.py  main_kb.py
src/bot/middlewares/: __init__.py  logging_middleware.py
src/bot/services/: __init__.py  prompt_builder.py
tests/: conftest.py  test_handlers.py  test_keyboards.py  test_main.py  test_prompt_builder.py
