[project]
name = "prompt-bot"
version = "0.1.0"
description = "Telegram bot for generating AI prompts"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.13.1",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"